# AscendOCR

./: AscendOCR.cpp  AscendOCR.h  AscendOCR_det.cpp  Ascend_rec.cpp  Ascend_rec.h  CMakeLists.txt  fitwater.py  mark.cpp  mark.py  sampleResnetQuickStart.cpp
transferPic/: transferPic.py
